grafana/manifests/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafanadashboard-sample
  annotations:
    # Cert-manager: automatically creates a certificate for this ingress
    cert-manager.io/cluster-issuer: ca-issuer-sandbox-local
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.sandbox.local
      secretName: grafana-tls

  rules:
    - host: grafana.sandbox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
